# logforge-analyzer

./: .coverage  .gitignore  CHANGELOG.md  README.md  analyzer.py  dados_brutos.txt  pyproject.toml  relatorio_limpo.csv  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/logforge/: __init__.py  cli.py  exporter.py  models.py  parser.py  report.py
src/logforge_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cli.py  test_exporter.py  test_parser.py  test_report.py
tests/fixtures/: amostra_pequena.txt
